typography and set up

--- a/less/nav.less
+++ b/less/nav.less
@@ -1,3 +1,9 @@
 nav{
-    background: #333333;
+    background: blue;
+    ul{
+        list-style-type: none;
+        li a{
+            color: white;
+        }
+    }
 }
