--- a/less/content.less
+++ b/less/content.less
@@ -1,3 +1,12 @@
-body{
+body {
+    background-color: @lt-gray;
     display: grid;
-}
+    justify-content: center;
+    align-items: center;
+  }
+  nav{
+      background: @nav-lt;
+      &.active{
+          background: @nav-dk;
+      }
+  }
