--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,103 @@
 body {
+  background-color: #dadada;
   display: grid;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 nav {
-  background: #333333;
+  background: #252525;
+}
+nav.active {
+  background: #1d1d1d;
+}
+nav {
+  background: blue;
+}
+nav ul {
+  list-style-type: none;
+}
+nav ul li a {
+  color: white;
+}
+@font-face {
+  font-family: "MWF-MDL2";
+  src: url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.woff") format("woff"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.ttf") format("truetype"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.svg") format("svg");
+}
+@font-face {
+  font-family: 'SegoeUI';
+  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf') format("ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'SegoeUILight';
+  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.ttf') format("ttf");
+  font-weight: 100;
+}
+@font-face {
+  font-family: 'SegoeUISemiLight';
+  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.ttf') format("ttf");
+  font-weight: 200;
+}
+@font-face {
+  font-family: 'SegoeUISemiBold';
+  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.ttf') format("ttf");
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'SegoeUIBold';
+  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.ttf') format("ttf");
+  font-weight: 700;
+}
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+h1 {
+  font-size: 80px;
+  line-height: 80px;
+  font-weight: 700;
+  color: #333333;
+}
+h2 {
+  font-size: 52px;
+  line-height: 80px;
+  color: #333333;
+  font-weight: 500;
+}
+h3 {
+  font-weight: 100;
+  font-size: 80px;
+  line-height: 80px;
+  color: black;
+}
+h4 {
+  font-size: 52px;
+  font-weight: 600;
+  line-height: 52px;
+  color: #212121;
+}
+h5 {
+  font-weight: 100;
+  font-size: 24px;
+  line-height: 30px;
+  color: #313131;
+}
+p {
+  font: 24px/30px 'SegoeUI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #212121;
+}
+.section_title {
+  font-size: 28px;
+  line-height: 28px;
+  color: #212121;
+  font-weight: 400;
+}
+.section_text {
+  font-weight: 200;
+  font-size: 28px;
+  line-height: 28px;
+  color: #212121;
 }
