adding grid styles and image resources

--- a/less/content.less
+++ b/less/content.less
@@ -6,8 +6,18 @@ body {
   }
   nav{
       background: @nav-lt;
-      color: 
+      color: #ffffff;
       &.active{
           background: @nav-dk;
       }
   }
+
+#section-1{
+    background: @lt-gray;
+    &-a{
+    background: @mid-gray;
+    }
+    &-b{
+        background: @lt-gray;
+    }
+}
