--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,8 @@
 @blue: #00bcf2;
 @yellow: #bad80a;
 @dk-gray: #cacaca;
-@lt-gray: #dadada;
+@mid-gray: #cac9c9;//section 1-a
+@lt-gray: #dadada;//section 1, 1-b
 @lt-black: #2d2d2d;
 @body-text-black: #212121;
 @body-text-lt-black: #2c2c2c;
