--- a/styles/main.css
+++ b/styles/main.css
@@ -10,9 +10,19 @@ body {
 }
 nav {
   background: #252525;
+  color: #ffffff;
 }
 nav.active {
   background: #1d1d1d;
+}
+#section-1 {
+  background: #dadada;
+}
+#section-1-a {
+  background: #cac9c9;
+}
+#section-1-b {
+  background: #dadada;
 }
 nav {
   background: blue;
@@ -57,7 +67,7 @@ body {
 }
 h1 {
   font-size: 80px;
-  line-height: 80px;
+  line-height: 0;
   font-weight: 700;
   color: #333333;
 }
@@ -100,4 +110,15 @@ p {
   font-size: 28px;
   line-height: 28px;
   color: #212121;
+}
+body {
+  background-color: #dadada;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
