--- a/less/typography.less
+++ b/less/typography.less
@@ -40,7 +40,7 @@ body {
 
 h1 {
     font-size: 80px;
-    line-height: 80px;
+    line-height: 0;
     font-weight: 700;
     color: @badge-gray;
 }
