--- a/less/typography.less
+++ b/less/typography.less
@@ -89,4 +89,10 @@ p {
     line-height: 28px;
     color: @body-text-black;
 }
-
+nav a{
+    font-size: 16px;
+    line-height: 42px;
+}
+.m-skip-to-main{
+    display: none;
+}
