--- a/less/nav.less
+++ b/less/nav.less
@@ -1,7 +1,10 @@
 nav{
-    background: blue;
+    background: @nav-dk;
     ul{
         list-style-type: none;
+        &#menu-list{
+            padding-left:0;
+        }
         li a{
             color: white;
         }
