--- a/less/typography.less
+++ b/less/typography.less
@@ -40,7 +40,7 @@ body {
 
 h1 {
     font-size: 80px;
-    line-height: 0;
+    line-height: 80px;
     font-weight: 700;
     color: @badge-gray;
 }
@@ -70,6 +70,11 @@ h5{
     font-size: 24px;
     line-height: 30px;
     color: @text-lt-gray;
+}
+h6{
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 38px;
 }
 p {
 
