--- a/less/content.less
+++ b/less/content.less
@@ -13,6 +13,10 @@ nav{
        background: @nav-lt;
    }
 }
+main > section{
+    padding-top: 95px;
+    padding-bottom: 95px;
+}
 #section-1{
     background: @lt-gray;
     &-a{
@@ -25,6 +29,7 @@ nav{
 
 #section-2{
     &-a{
+        background: @mid-gray;
 
     }
     &-b{
@@ -39,6 +44,14 @@ nav{
 }
 
 .badge{
+    justify-self: self-start;
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 400;
+    height: 18px;
+    outline-color: transparent;
+    color: #000000;
+    padding: 0 7px 1px 7px;
     &.blue{
         background: @blue;
     }
