adjusting typography/grid to design changes

--- a/less/nav.less
+++ b/less/nav.less
@@ -8,6 +8,18 @@ nav{
         li a{
             color: white;
             text-decoration: none;
+            &.purple:hover{
+                color: @purple;
+            }
+            &.blue:hover{
+                color: @blue;
+            }
+            &.yellow:hover, &.yellow:active{
+                color: @yellow;
+            }
+            &.orange:hover, &.orange:active{
+                color: @orange;
+            }
         }
     }
 }
