--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,7 @@
 @purple: #b4a0ff;
 @blue: #00bcf2;
 @yellow: #bad80a;
+@orange: #FF8C00;
 @dk-gray: #cacaca;
 @mid-gray: #cac9c9;//section 1-a
 @lt-gray: #dadada;//section 1, 1-b
