--- a/styles/main.css
+++ b/styles/main.css
@@ -10,8 +10,8 @@ div {
   padding: 0;
 }
 h1 {
-  grid-column: span 6;
-  margin-bottom: 40px;
+  grid-column: span 7;
+  margin-bottom: 20px;
 }
 nav {
   background: #1d1d1d;
@@ -74,6 +74,20 @@ nav ul li a {
   color: white;
   text-decoration: none;
 }
+nav ul li a.purple:hover {
+  color: #b4a0ff;
+}
+nav ul li a.blue:hover {
+  color: #00bcf2;
+}
+nav ul li a.yellow:hover,
+nav ul li a.yellow:active {
+  color: #bad80a;
+}
+nav ul li a.orange:hover,
+nav ul li a.orange:active {
+  color: #FF8C00;
+}
 @font-face {
   font-family: "MWF-MDL2";
   src: url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.woff") format("woff"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.ttf") format("truetype"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.svg") format("svg");
@@ -109,7 +123,7 @@ body {
 h1 {
   font-size: 80px;
   line-height: 80px;
-  font-weight: 700;
+  font-weight: 300;
   color: #333333;
 }
 h2 {
