--- a/less/typography.less
+++ b/less/typography.less
@@ -62,7 +62,7 @@ h3 {
 h4{
     font-size: 52px;
     font-weight: 600;
-    line-height: 52px;
+    line-height: 60px;
     color: @body-text-black;
 }
 h5{
@@ -75,9 +75,13 @@ h6{
     font-weight: 400;
     font-size: 32px;
     line-height: 38px;
+    &.small{
+        font-size: 28px;
+    }
 }
 p {
-    font: 15px/20px'SegoeUI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    line-height: 20px;
     color: @body-text-black;
     
 }
@@ -100,3 +104,4 @@ nav a{
 .m-skip-to-main{
     display: none;
 }
+
