--- a/styles/main.css
+++ b/styles/main.css
@@ -37,8 +37,12 @@ main > section {
 #section-2-a {
   background: #cac9c9;
 }
+#section-2-a h3 {
+  margin-bottom: 30px;
+}
 .badge {
   justify-self: self-start;
+  grid-column:  1 / -1 ;
   font-size: 13px;
   line-height: 18px;
   font-weight: 400;
@@ -60,6 +64,47 @@ main > section {
 }
 .badge.yellow {
   background: #bad80a;
+}
+.badge.orange {
+  background: #FF8C00;
+}
+.overlay {
+  display: grid;
+  grid-column: span 8;
+  grid-template-columns: repeat(7, 1fr);
+  grid-gap: 20px;
+}
+.overlay .left,
+.overlay .right {
+  background: rgba(0, 0, 0, 0.4);
+  padding: 30px 20px;
+}
+.overlay .left {
+  width: 250px;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  z-index: 10;
+  margin-top: 15px;
+  margin-bottom: 50px;
+}
+.overlay .right {
+  width: 250px;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  z-index: 10;
+  margin-top: 15px;
+  margin-bottom: 50px;
+}
+.overlay p {
+  color: #ffffff;
+  padding-bottom: 20px;
+  font-size: 16px;
+  line-height: 24px;
+}
+.overlay .img-wrapper {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 1;
 }
 nav {
   background: #1d1d1d;
@@ -141,7 +186,7 @@ h3 {
 h4 {
   font-size: 52px;
   font-weight: 600;
-  line-height: 52px;
+  line-height: 60px;
   color: #212121;
 }
 h5 {
@@ -155,8 +200,12 @@ h6 {
   font-size: 32px;
   line-height: 38px;
 }
+h6.small {
+  font-size: 28px;
+}
 p {
-  font: 15px/20px 'SegoeUI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 20px;
   color: #212121;
 }
 .section_title {
@@ -210,12 +259,15 @@ header nav {
   grid-column-start: 2;
   grid-column-end: 3;
   display: grid;
+  grid-template-rows: minmax(50px, 1fr);
 }
 #mainArea main {
   display: grid;
 }
 #mainArea main section {
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: 95px repeat(7, 1fr) 75px;
+  grid-auto-flow: row;
+  grid-auto-rows: auto;
   display: grid;
 }
 #mainArea main section div.wrapper {
@@ -228,17 +280,40 @@ header nav {
   grid-template-rows: repeat(autofill, -webkit-max-content);
   grid-template-rows: repeat(autofill, max-content);
 }
-#mainArea main section div.wrapper p,
 #mainArea main section div.wrapper h6,
 #mainArea main section div.wrapper h4,
 #mainArea main section div.wrapper .cross-through,
 #mainArea main section div.wrapper picture {
   grid-column: span 9;
 }
-#mainArea main section div.wrapper .half {
-  grid-column: span 5;
-  grid-gap: 50px;
+#mainArea main section div.wrapper p {
+  grid-column: span 7;
 }
+#mainArea main section div.wrapper .half {
+  grid-column: span 4;
+  display: grid;
+  grid-auto-rows: auto, auto;
+  grid-template-columns: 40px 1fr;
+}
+#mainArea main section div.wrapper .half .numeral {
+  display: inline-block;
+}
+#mainArea main section div.wrapper .half h6,
+#mainArea main section div.wrapper .half p {
+  grid-column-start: 2;
+  grid-column-end: 10;
+}
+#mainArea main section div.wrapper .overlay {
+  display: grid;
+  grid-column: span 8;
+}
+#mainArea main section#section-1 h1,
 #mainArea main section#section-1 h6 {
+  grid-column: span 5;
+}
+#mainArea main section#section-2-a h4 {
   grid-column: span 6;
+}
+#mainArea main section h3 {
+  grid-column: span 9;
 }
