adding content section 2

--- a/less/typography.less
+++ b/less/typography.less
@@ -97,6 +97,17 @@ p {
     line-height: 28px;
     color: @body-text-black;
 }
+.thirds {
+    .title{
+    font-size: 20px;
+    line-height:30px; 
+    }
+    .desc{
+        font-size: 22px;
+        line-height: 28px;
+        letter-spacing: .025em;
+    }
+}
 nav a{
     font-size: 16px;
     line-height: 42px;
