--- a/less/grid.less
+++ b/less/grid.less
@@ -76,7 +76,7 @@ body {
                     grid-column: span 5;
                 }
             }
-            &#section-2-a{
+            &#section-2-1{
                 h4{
                     grid-column: span 6;
                 }
