--- a/styles/main.css
+++ b/styles/main.css
@@ -320,7 +320,7 @@ header nav {
 #mainArea main section#section-1 h6 {
   grid-column: span 5;
 }
-#mainArea main section#section-2-a h4 {
+#mainArea main section#section-2-1 h4 {
   grid-column: span 6;
 }
 #mainArea main section h3 {
