--- a/less/typography.less
+++ b/less/typography.less
@@ -83,6 +83,7 @@ p {
     font-size: 15px;
     line-height: 20px;
     color: @body-text-black;
+    letter-spacing: .025em;
     
 }
 .section_title{
