--- a/styles/main.css
+++ b/styles/main.css
@@ -173,9 +173,13 @@ h1 {
 }
 h2 {
   font-size: 52px;
-  line-height: 80px;
-  color: #333333;
+  line-height: 52px;
+  color: #313131;
   font-weight: 500;
+}
+h2.super {
+  font-weight: 900;
+  color: #333333;
 }
 h3 {
   font-weight: 100;
@@ -208,6 +212,16 @@ p {
   line-height: 20px;
   color: #212121;
   letter-spacing: .025em;
+}
+p.title {
+  font-size: 22px;
+  line-height: 28px;
+  font-weight: 400;
+}
+p.ms-store {
+  font-size: 24px;
+  line-height: 42px;
+  font-weight: 600;
 }
 .section_title {
   font-size: 28px;
