--- a/less/typography.less
+++ b/less/typography.less
@@ -98,6 +98,10 @@ p {
         line-height: 42px;
         font-weight: 600;
     }
+    &.large{
+        font-size: 18px;
+        line-height: 24px;
+    }
 }
 .section_title{
     font-size: 28px;
@@ -128,5 +132,8 @@ nav a{
 }
 .m-skip-to-main{
     display: none;
+}
+a{
+    color: @ms-blue;
 }
 
