--- a/less/grid.less
+++ b/less/grid.less
@@ -10,35 +10,39 @@ body {
     display: grid;
     grid-template-columns: 250px 1fr;
     margin: 0;
-  }
-  header{
-      display: grid;
-      grid-column-start: 1;
-      grid-column-end: 2;
-      nav{
-          position: fixed;
-          top:0;
-          justify-self: stretch;
-          padding: 20px;
-          display: grid;
-       
-      }
-  }
-  
-  #mainArea{
-      grid-column-start: 2;
-      grid-column-end: 3;
-      display: grid;
-      grid-template-rows: minmax(50px, 1fr);
-
-      main{
+}
+header{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    nav{
+        position: fixed;
+        top:0;
+        justify-self: stretch;
+        padding: 20px;
         display: grid;
     
+    }
+}
+
+#mainArea{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    display: grid;
+    grid-template-rows: minmax(50px, 1fr);
+
+    main{
+    display: grid;
+
         section{
             grid-template-columns: 95px repeat(7, 1fr) 75px;
             grid-auto-flow: row;
             grid-auto-rows: auto;
             display: grid;
+            &.small{
+                padding-top: 0;
+                padding-bottom: 0;
+            }
             div.wrapper{
                 grid-auto-flow: row;
                 grid-column-start: 2;
@@ -47,7 +51,8 @@ body {
                 grid-gap: 20px;
                 grid-template-columns: repeat(9, 1fr);
                 grid-template-rows: repeat( autofill, max-content );
-                h6, h4, .cross-through, picture{
+                
+                h6, h2, .cross-through, picture{
                     grid-column: span 9;
                 }
                 p{
@@ -56,7 +61,6 @@ body {
                 .half{
                     grid-column: span 4;
                     display: grid;
-                    grid-auto-rows: auto, auto;
                     grid-template-columns: 40px 1fr;
                     .numeral{
                         display: inline-block;
@@ -65,26 +69,50 @@ body {
                         grid-column-start: 2;
                         grid-column-end: 10;
                     }
+                    p{
+                        padding-right: 50px;
+                    }
+
                 }
-                .overlay{
-                    display: grid;
-                    grid-column: span 8;
-                }
+
             }
             &#section-1{
                 h1, h6{
                     grid-column: span 5;
                 }
             }
-            &#section-2-1{
-                h4{
-                    grid-column: span 6;
-                }
-            }
             h3{
                 grid-column: span 9;
             }
+            &#section-4-1{
+                h5{
+                    grid-column: span 8;
+                }
+    
+            }
         }
-      }
-      
-  }
+    }
+}
+  
+
+hr{
+    border-top: 1px solid @hr-gray;
+    margin-top: 90px;
+    margin-bottom: 60px;
+    grid-column-start: 2;
+    grid-column-end: 8;
+    width: 100%; 
+}
+.thirds{
+    grid-column: span 3;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+div{
+    grid-column: span 10;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    h4{
+        grid-column: span 5;
+    }
+}
