--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,6 @@
 @purple: #b4a0ff;
 @blue: #00bcf2;
+@ms-blue: #076dcc;
 @yellow: #bad80a;
 @orange: #FF8C00;
 @dk-gray: #cacaca;
@@ -17,3 +18,4 @@
 @text-green: #107c10;
 @text-red: #a80000;
 @img-overlay: rgba(0,0,0,.5);
+@hr-gray: #bfbfbf;
