--- a/less/grid.less
+++ b/less/grid.less
@@ -6,7 +6,7 @@ html{
     box-sizing: inherit;
 }
 body {
-    background-color: @lt-gray;
+    background-color: @dk-gray;
     display: grid;
     grid-template-columns: 250px 1fr;
     margin: 0;
@@ -40,7 +40,6 @@ header{
             grid-auto-rows: auto;
             display: grid;
             &.small{
-                padding-top: 0;
                 padding-bottom: 0;
             }
             div.wrapper{
