--- a/less/variables.less
+++ b/less/variables.less
@@ -3,10 +3,26 @@
 @ms-blue: #076dcc;
 @yellow: #bad80a;
 @orange: #FF8C00;
+@green: #00b294;
 @dk-gray: #cacaca;
-@mid-gray: #cac9c9;//section 1-a
-@lt-gray: #dadada;//section 1, 1-b
+@lt-gray: #dadada;
 @lt-black: #2d2d2d;
+@drkr-gray: #bcbcbc;
+@ltr-gray: #dedede;
+@mid-gray: #d3d3d3;
+@dkmid-gray: #c3c3c3;
+@ltmid-gray: #e2e2e2;
+@ltlt-gray: #eaeaea;
+@dk-white: #f3f3f3;
+@other-gray: #c1c1c1;
+@other-lt-gray: #ececec;
+@other-dk-white: #e6e6e6;
+@another-gray: #d6d6d6;
+@ltlt-white: #f1f1f1;
+@mid-white: #f6f6f6;
+@dkdk-gray: #c8c8c8;
+@drkr-white: #f5f5f5;
+@midmid-gray: #b8b8b8;
 @body-text-black: #212121;
 @body-text-lt-black: #2c2c2c;
 @text-gray: #373737;
