--- a/styles/main.css
+++ b/styles/main.css
@@ -28,17 +28,125 @@ main > section {
 #section-1 {
   background: #dadada;
 }
-#section-1-a {
-  background: #cac9c9;
+#section-1-1 {
+  background: #cacaca;
 }
-#section-1-b {
+#section-1-2 {
   background: #dadada;
 }
-#section-2-a {
-  background: #cac9c9;
+#section-2 {
+  background: #cacaca;
 }
-#section-2-a h3 {
+#section-2-1 {
+  background: #cacaca;
+}
+#section-2-1 h3 {
   margin-bottom: 30px;
+}
+#section-2-2 {
+  background: #bcbcbc;
+}
+#section-2-3 {
+  background: #dedede;
+}
+#section-2-4 {
+  background: #d3d3d3;
+}
+#section-2-5 {
+  background: #c3c3c3;
+}
+#section-2-6 {
+  background: #e2e2e2;
+}
+#section-2-7 {
+  background: #f3f3f3;
+}
+#section-3 {
+  background: #cacaca;
+}
+#section-3-1 {
+  background: #cacaca;
+}
+#section-3-2 {
+  background: #c1c1c1;
+}
+#section-3-3 {
+  background: #dedede;
+}
+#section-3-4 {
+  background: #ececec;
+}
+#section-4 {
+  background: #e6e6e6;
+}
+#section-4-1 {
+  background: #e6e6e6;
+}
+#section-4-2 {
+  background: #d6d6d6;
+}
+#section-4-3 {
+  background: #f1f1f1;
+}
+#section-4-4 {
+  background: #cacaca;
+}
+#section-4-5 {
+  background: #c1c1c1;
+}
+#section-4-6 {
+  background: #dedede;
+}
+#section-4-7 {
+  background: #ececec;
+}
+#section-4-8 {
+  background: #f6f6f6;
+}
+#section-4-9 {
+  background: #c8c8c8;
+}
+#section-5 {
+  background: #cacaca;
+}
+#section-5-1 {
+  background: #cacaca;
+}
+#section-5-2 {
+  background: #c1c1c1;
+}
+#section-5-3 {
+  background: #f5f5f5;
+}
+#section-5-4 {
+  background: #eaeaea;
+}
+#section-5-5 {
+  background: #c1c1c1;
+}
+#section-5-6 {
+  background: #b8b8b8;
+}
+#section-5-7 {
+  background: #e6e6e6;
+}
+#section-5-8 {
+  background: #c1c1c1;
+}
+#section-5-9 {
+  background: #e6e6e6;
+}
+#section-5-10 {
+  background: #c1c1c1;
+}
+#section-5-11 {
+  background: #b8b8b8;
+}
+#section-5-12 {
+  background: #f1f1f1;
+}
+#section-5-13 {
+  background: #e6e6e6;
 }
 .badge {
   justify-self: self-start;
@@ -98,7 +206,8 @@ main > section {
 .overlay .right {
   width: 250px;
   grid-column-end: 6;
-  grid-row-start: auto;
+  grid-column-start: auto;
+  grid-row-start: 1;
   z-index: 10;
   margin-top: 15px;
   margin-bottom: 50px;
@@ -272,7 +381,7 @@ html {
   box-sizing: inherit;
 }
 body {
-  background-color: #dadada;
+  background-color: #cacaca;
   display: grid;
   grid-template-columns: 250px 1fr;
   margin: 0;
@@ -305,7 +414,6 @@ header nav {
   display: grid;
 }
 #mainArea main section.small {
-  padding-top: 0;
   padding-bottom: 0;
 }
 #mainArea main section div.wrapper {
