--- a/styles/main.css
+++ b/styles/main.css
@@ -449,7 +449,7 @@ header nav {
   grid-column-end: 10;
 }
 #mainArea main section div.wrapper .half p {
-  padding-right: 50px;
+  padding-right: 100px;
 }
 #mainArea main section#section-1 h1,
 #mainArea main section#section-1 h6 {
@@ -465,14 +465,21 @@ hr {
   border-top: 1px solid #bfbfbf;
   margin-top: 90px;
   margin-bottom: 60px;
-  grid-column-start: 2;
-  grid-column-end: 8;
+  grid-column-start: 1;
+  grid-column-end: 7;
   width: 100%;
 }
 .thirds {
   grid-column: span 3;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+}
+.thirds p {
+  grid-column: span 2;
+}
+.thirds p .title {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 div {
   grid-column: span 10;
