styling through section 2

--- a/less/content.less
+++ b/less/content.less
@@ -226,3 +226,23 @@ main > section{
         grid-row-start: 1;
     }
 }
+
+.three_cs{
+    grid-column: span 2;
+    justify-self: right;
+    text-align: right;
+    p{
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 28px;
+        color: black;
+    }
+    &_content{
+        grid-column: span 5;
+    }
+}
+
+//spacing
+.tall{
+    padding-top: 20px;
+}
