section 2-8 lines and tables

--- a/less/content.less
+++ b/less/content.less
@@ -64,6 +64,9 @@ main > section{
     &-7{
         background: @dk-white;
     }
+    &-8{
+        background: @other-lt-gray;
+    }
 }
 #section-3{
     background: @dk-gray;
